dataset1235/2025-2/610742602/users/1606503414/executions/677928262_704983377.log
== SUBMISSION (2025-08-28 21:53:12)
-- CODE: 
nx=int(input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:56)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:54)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:55)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:52:49)
-- CODE: 
nx=int(input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:58)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:52:05)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:44:05)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:52:04)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:57)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:52)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:52:07)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:59)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:57)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:58)
-- CODE: 
nx=int9input("digite um numero X: "))
ny=int(input("digite um numero Y: "))
print(nx//ny)
print(nx%ny)
print(nx/ny)
print(nx*ny)
print(ny**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    nx=int9input("digite um numero X: "))
                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
